fixing routing bugs

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -16,19 +16,19 @@
 <!--        <ion-item nav-clear menu-close ng-click="login()">
           Login
         </ion-item>-->
-        <ion-item nav-clear menu-close href="#/template/home">
+        <ion-item nav-clear menu-close ui-sref="#/templates/home">
           Home
         </ion-item>
-        <ion-item nav-clear menu-close href="#/template/conversion">
+        <ion-item nav-clear menu-close ui-sref="#/templates/conversion">
           Conversion
         </ion-item>
-        <ion-item nav-clear menu-close href="#/template/dictionary">
+        <ion-item nav-clear menu-close ui-sref="#/templates/dictionary">
           Dictionary
         </ion-item>
-        <ion-item nav-clear menu-close href="#/template/double">
+        <ion-item nav-clear menu-close ui-sref="#/templates/double">
           Doubler
         </ion-item>
-        <ion-item nav-clear menu-close href="#/template/timer">
+        <ion-item nav-clear menu-close ui-sref="#/templates/timer">
           Timer
         </ion-item>
       </ion-list>
