--- a/www/templates/double.html
+++ b/www/templates/double.html
@@ -3,7 +3,7 @@
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-content class="has-header">
-
-        </ion-list>
+{{message}}
+       <ion-list> </ion-list>
     </ion-content>
 </ion-view>
