--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,6 +4,7 @@
     </ion-nav-buttons>
     <ion-content class="has-header">
 <p>askdjfsd;fjk;</p>
+        {{message}}
         </ion-list>
     </ion-content>
 </ion-view>
