--- a/www/templates/timer.html
+++ b/www/templates/timer.html
@@ -3,7 +3,7 @@
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-content class="has-header">
-
+        {{message}}
 
      <!--   {{time}}
         <button ng-click="" class="button button-assertive">Start</button>
