--- a/www/templates/converter.html
+++ b/www/templates/converter.html
@@ -1,14 +1,12 @@
-<ion-view title="Conversion">
+<ion-view name="menuContent" title="Double">
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-content class="has-header">
-{{message}}
-        <!--<div class="col"><label>Enter the measurment</label><input type="text" /></div>
-        <button><i class="ion-arrow-right-a"></i></button>
-        {{ &lt;!&ndash;converted mesurement&ndash;&gt; }}-->
+        {{message}}
 
 
 
     </ion-content>
 </ion-view>
+
