--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -8,27 +8,27 @@
   </ion-pane>
 
   <ion-side-menu side="left">
-    <header class="bar bar-header bar-stable">
-      <h1 class="title">Left</h1>
+    <header class="bar bar-header bar-assertive">
+      <h1 class="title">Menu</h1>
     </header>
     <ion-content class="has-header">
       <ion-list>
 <!--        <ion-item nav-clear menu-close ng-click="login()">
           Login
         </ion-item>-->
-        <ion-item nav-clear menu-close ui-sref="#/templates/home">
+        <ion-item nav-clear menu-close ui-sref="app.home">
           Home
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="#/templates/conversion">
-          Conversion
-        </ion-item>
-        <ion-item nav-clear menu-close ui-sref="#/templates/dictionary">
-          Dictionary
-        </ion-item>
-        <ion-item nav-clear menu-close ui-sref="#/templates/double">
+        <ion-item nav-clear menu-close ui-sref="app.conversion">
           Doubler
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="#/templates/timer">
+        <ion-item nav-clear menu-close ui-sref="app.dictionary">
+          Dictionary
+        </ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.double">
+          Conversion
+        </ion-item>
+        <ion-item nav-clear menu-close ui-sref="app.timer">
           Timer
         </ion-item>
       </ion-list>
