--- a/www/templates/dictionary.html
+++ b/www/templates/dictionary.html
@@ -1,62 +1,29 @@
-<ion-view title="Dictionary">
+
+<ion-view name="menuContent" title="Cooking Terms Dictionary">
+
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
-    <ion-content class="has-header" >
+    <ion-content class="has-header">
 
-        <ion-list>
-            <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
-                {{playlist.title}}
-            </ion-item>
+        <input ng-model="query" class="ion-search" placeholder="Search:" id="searchDict">
+    <button class="button button-assertive ion-ios7-star">Favortive</button>
+        <ion-list ng-repeat="term in favorite">
+            <ion-item>{{term.term}}</ion-item>
+        </ion-list>
 
-
-      <!--  <div class="bar bar-header bar-assertive">
-            <h1 class="title">Cooking Terms Dictionary</h1>
-        </div>
-        &lt;!&ndash;<div ng-controller="HeadFootCtrl">
-            <ion-header-bar class="bar-assertive">
-                <h1 class="title">Dictionary</h1>
-            </ion-header-bar>
-
-            <div class="col-md-2">
-
-                <label>Search:</label><input ng-model="query">
-
-            </div>
-
-            <ul>
-                <li ng-repeat="term in terms">
-                    <p>{{terms.term}}</p>
-                    <p>{{terms.definition}}</p>
-                </li>
-            </ul>
-            <div class="bar bar-footer">jordanlarkin&copy;2014</div> &ndash;&gt;
-
-
-        </div>
-        <body ng-controller="PhoneListCtrl">
-
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-2">
-                    &lt;!&ndash;Sidebar content&ndash;&gt;
-
-                    Search: <input ng-model="query">
-
-                </div>
-                <div class="col-md-10">
-                    &lt;!&ndash;Body content&ndash;&gt;
-
-
-
-                </div>
-            </div>
-        </div>
-        </body>-->
-
-
-
-
-
+       <!-- <ion-list class="" ng-repeat="term in dictionary | filter:query">
+            <ion-item class="ion-ios7-star-outline">{{"  " + term.term}}</ion-item>
+            <ion-item class="">{{term.definition}}</ion-item>
+        </ion-list>-->
+        <dl ng-repeat="term in dictionary | filter:query">
+           <ul>
+               <li>
+               <dt class="ion-ios7-star-outline">{{" " + term.term }}</dt>
+               <dd>{{ term.definition }}</dd>
+               </li>
+           </ul>
+        </dl>
+        <div class="bar bar-footer">jordanlarkin &copy; 2014</div>
     </ion-content>
 </ion-view>
