--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,10 +1,11 @@
-<ion-view title="Home">
+<ion-view name="menuContent" title="Home">
+
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-content class="has-header">
-<p>askdjfsd;fjk;</p>
-        {{message}}
-        </ion-list>
+
+       <img id="logo" src="img/smashedPotatoLogo.jpg" alt="A Smashed Potato"/>
+
     </ion-content>
 </ion-view>
