--- a/www/templates/timer.html
+++ b/www/templates/timer.html
@@ -1,21 +1,18 @@
-<ion-view title="Timer">
+<ion-view name="menuContent" title="Timer" class="bar-assertive">
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-content class="has-header">
         {{message}}
 
-     <!--   {{time}}
-        <button ng-click="" class="button button-assertive">Start</button>
-        <button ng-click="" class="">Pause</button>
-        <button ng-click="" class="">Clear</button>
+       {{time}}
 
-        <div class="button-bar button button-assertive">
-            <a class="button" ng-click="">Start</a>
-            <a class="button"ng-click="" >Pause</a>
-            <a class="button" ng-click="">Clear</a>
+        <div class="button-bar button button-dark">
+            <a class="button button-assertive icon ion-play" ng-click=""> Start</a>
+            <a class="button button-assertive icon ion-pause"ng-click="" > Pause</a>
+            <a class="button button-assertive" ng-click=""> Clear</a>
         </div>
-        -->
+
 
 
     </ion-content>
