fixed routing bugs

--- a/www/templates/dictionary.html
+++ b/www/templates/dictionary.html
@@ -7,7 +7,7 @@
     <ion-content class="has-header">
 
         <input ng-model="query" class="ion-search" placeholder="Search:" id="searchDict">
-    <button class="button button-assertive ion-ios7-star">Favortive</button>
+    <button class="button button-assertive ion-ios7-star">Favorites</button>
         <ion-list ng-repeat="term in favorite">
             <ion-item>{{term.term}}</ion-item>
         </ion-list>
