--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,14 +19,14 @@
         <ion-item nav-clear menu-close ui-sref="app.home">
           Home
         </ion-item>
-        <ion-item nav-clear menu-close ui-sref="app.conversion">
-          Doubler
+        <ion-item nav-clear menu-close ui-sref="app.converter">
+          Conversion
         </ion-item>
         <ion-item nav-clear menu-close ui-sref="app.dictionary">
           Dictionary
         </ion-item>
         <ion-item nav-clear menu-close ui-sref="app.double">
-          Conversion
+          Doubler
         </ion-item>
         <ion-item nav-clear menu-close ui-sref="app.timer">
           Timer
