--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,11 +1,15 @@
 <ion-view name="menuContent" title="Home">
-
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-content class="has-header">
 
        <img id="logo" src="img/smashedPotatoLogo.jpg" alt="A Smashed Potato"/>
+        <h3>Word of the day!</h3>
+          <h4>{{message.term}}</h4>
+        <p>What does that mean? Check out our <a href="#">dictionary</a> to find out!</p>
+
 
     </ion-content>
 </ion-view>
+
