--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -16,20 +16,21 @@
 <!--        <ion-item nav-clear menu-close ng-click="login()">
           Login
         </ion-item>-->
+
         <ion-item nav-clear menu-close ui-sref="app.home">
-          Home
+          <i class="ion-ios7-home"></i> Home
         </ion-item>
         <ion-item nav-clear menu-close ui-sref="app.converter">
-          Conversion
+          <i class="ion-flask"></i> Conversion Tools
         </ion-item>
         <ion-item nav-clear menu-close ui-sref="app.dictionary">
-          Dictionary
+          <i class="ion-android-book"></i> Dictionary
         </ion-item>
         <ion-item nav-clear menu-close ui-sref="app.double">
-          Doubler
+          <i class="ion-reply-all"></i> Double a Recipe
         </ion-item>
         <ion-item nav-clear menu-close ui-sref="app.timer">
-          Timer
+         <i class="ion-clock"></i> Timer
         </ion-item>
       </ion-list>
     </ion-content>
